--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="cats" class="container text-center">
             <div class="alert alert-info mt-4 mb-4 text-mono" role="alert">
-                <i class="fas fa-cat"></i> Nothing but awesome cat gifs!
-                <i class="fab fa-github-alt"></i> Contribute on 
+                <i class="fas fa-cat"></i> Nothing But Awesome Cat Gifs!
+                <i class="fab fa-github-alt"></i> Contribute On 
                 <a href="https://github.com/andrejarrell/catgifs" target="_blank"> GitHub!</a>
                 <i class="fas fa-file-upload"></i> Total Gifs: {{ cats.length }}
             </div>
