--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <title>Cat Gifs</title>
         <link rel="shortcut icon" href="images/cat.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cat Gifs</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -28,6 +28,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/yall-js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script>
         <script src="index.js" type="module"></script>
     </body>
 </html>
